Fixed #1097: [Ag20] Style broken on material and bootstrap classes (Fixed styling issues on the top navbar)

--- a/admin/webapp/websrc/app/routes/components/global-notifications/global-notifications.component.scss
+++ b/admin/webapp/websrc/app/routes/components/global-notifications/global-notifications.component.scss
@@ -6,6 +6,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  font-size: 12px;
   &.clamped {
     -webkit-line-clamp: 2;
   }
@@ -13,3 +14,4 @@
     -webkit-line-clamp: none;
   }
 }
+
